--- a/CLASE-SASS/SASS_NODE/css/estilos2.css
+++ b/CLASE-SASS/SASS_NODE/css/estilos2.css
@@ -56,6 +56,14 @@ p {
   grid-row: span 2;
   grid-column: span 2; }
 
+.carousel--alto {
+  height: 40vh; }
+
+.carousel--img {
+  object-fit: cover;
+  object-position: center;
+  height: 40vh; }
+
 .header {
   background-color: white;
   display: flex;
@@ -81,15 +89,18 @@ p {
     background-color: yellowgreen; }
 
 .hero {
-  background-image: url("../../../img/fondo2.webp");
-  background-position: center bottom;
-  color: black;
-  font-size: 1rem;
-  height: 100vh;
+  background-image: url("../../../img/fondo_pintura3.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
   position: relative;
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  background-position: center bottom;
+  color: black;
+  font-size: 1rem;
+  height: 100vh;
   padding: 2rem 1rem; }
   .hero__heading {
     color: black;
@@ -106,6 +117,18 @@ p {
     font-family: 'Inter', sans-serif;
     color: blue; }
 
+.hero:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to left, #8b86a3, rgba(238, 238, 243, 0.247));
+  opacity: 0.8; }
+
 .info {
   padding: 2rem;
   display: flex;
@@ -114,7 +137,7 @@ p {
 
 .infocard {
   color: white;
-  background-color: #226F01;
+  background: linear-gradient(to left, rgba(68, 160, 68, 0.726), rgba(18, 139, 54, 0.87));
   padding: 1rem 2rem;
   position: relative; }
   .infocard__img {
@@ -134,7 +157,7 @@ p {
   overflow: hidden; }
   .video__titulo {
     position: absolute;
-    color: white;
+    color: black;
     font-family: 'Inter', sans-serif;
     font-size: 2rem; }
 
