--- a/CLASE-SASS/SASS_NODE/sass/parciales/_video.scss
+++ b/CLASE-SASS/SASS_NODE/sass/parciales/_video.scss
@@ -9,7 +9,7 @@
     
     &__titulo {
       position: absolute;
-      color: white;
+      color: black;
       font-family: 'Inter', sans-serif;
       font-size: 2rem;
     }
