--- a/CLASE-SASS/SASS_NODE/css/estilos2.css
+++ b/CLASE-SASS/SASS_NODE/css/estilos2.css
@@ -126,7 +126,7 @@ p {
   right: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to left, #8b86a3, rgba(238, 238, 243, 0.247));
+  background: linear-gradient(to left, #8b86a325, rgba(238, 238, 243, 0.247));
   opacity: 0.8; }
 
 .info {
@@ -137,7 +137,7 @@ p {
 
 .infocard {
   color: white;
-  background: linear-gradient(to left, rgba(68, 160, 68, 0.726), rgba(18, 139, 54, 0.87));
+  background: linear-gradient(to left, #023108, #02611d);
   padding: 1rem 2rem;
   position: relative; }
   .infocard__img {
