--- a/CLASE-SASS/SASS_NODE/sass/parciales/_hero.scss
+++ b/CLASE-SASS/SASS_NODE/sass/parciales/_hero.scss
@@ -48,7 +48,7 @@
   right: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to left, #8b86a3, rgba(238, 238, 243, 0.247));
+  background: linear-gradient(to left, #8b86a325, rgba(238, 238, 243, 0.247));
   opacity: 0.8;
   }
   
