--- a/CLASE-SASS/SASS_NODE/sass/parciales/_info.scss
+++ b/CLASE-SASS/SASS_NODE/sass/parciales/_info.scss
@@ -7,7 +7,7 @@
   
   .infocard {
     color: white;
-    background: linear-gradient(to left, rgba(68, 160, 68, 0.726), rgba(18, 139, 54, 0.87));
+    background: linear-gradient(to left, rgb(2, 49, 8), rgb(2, 97, 29));
     padding: 1rem 2rem;
     position: relative;
     
